--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,11 +1,11 @@
 body {
-  font-size: .875rem;
+    font-size: 0.875rem;
 }
 
 .feather {
-  width: 16px;
-  height: 16px;
-  vertical-align: text-bottom;
+    width: 16px;
+    height: 16px;
+    vertical-align: text-bottom;
 }
 
 /*
@@ -13,18 +13,17 @@ body {
  */
 
 .sidebar {
-  position: fixed;
-  top: 0;
-  /* rtl:raw:
+    position: fixed;
+    top: 0;
+    /* rtl:raw:
   right: 0;
   */
-  bottom: 0;
-  /* rtl:remove */
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(13, 218, 233, 0.1);
-  
+    bottom: 0;
+    /* rtl:remove */
+    left: 0;
+    z-index: 100; /* Behind the navbar */
+    padding: 48px 0 0; /* Height of navbar */
+    box-shadow: inset -1px 0 0 rgba(13, 218, 233, 0.1);
 }
 
 /*@media (max-width: 767.98px) {
@@ -34,47 +33,43 @@ body {
 }*/
 
 .sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-
+    position: relative;
+    top: 0;
+    height: calc(100vh - 48px);
+    padding-top: 0.5rem;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
 
 .sidebar .nav-link {
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: .3px;
-  color: #3d2116;
-  align-items: center;
-  height: 50px;
-  padding: 20px;
-  width: 100%;
-  font-family:inherit;
-
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.3px;
+    color: #3d2116;
+    align-items: center;
+    height: 50px;
+    padding: 20px;
+    width: 100%;
+    font-family: inherit;
 }
 
 .sidebar .nav-link .feather {
-  margin-right: 4px;
-  color: #727272;
-
+    margin-right: 4px;
+    color: #727272;
 }
 
 .sidebar .nav-link.active {
-  color: #2470dc;
+    color: #2470dc;
 }
 
 .sidebar .nav-link:hover .feather,
 .sidebar .nav-link.active .feather {
-  color: inherit;
+    color: inherit;
 }
 
 .sidebar-heading {
-  font-size: .75rem;
-  text-transform: uppercase;
-  
+    font-size: 0.75rem;
+    text-transform: uppercase;
 }
 
 /*
@@ -82,41 +77,36 @@ body {
  */
 
 .navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: 20px;
-  text-align: center;
-  background-color: rgba(16, 128, 118, 0.87);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-  
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    font-size: 20px;
+    text-align: center;
+    /* background-color: rgba(16, 128, 118, 0.87); */
+    background-color: #035195;
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
 }
 
 .navbar .navbar-toggler {
-  top: .25rem;
-  right: 1rem;
-  
-  
+    top: 0.25rem;
+    right: 1rem;
 }
 
 .navbar .form-control {
-  padding: .75rem 1rem;
-  border-width: 0;
-  border-radius: 0;
-  
+    padding: 0.75rem 1rem;
+    border-width: 0;
+    border-radius: 0;
 }
 
 .form-control-dark {
-  color: #fff;
-  background-color: rgba(28, 133, 141, 0.1);
-  border-color: rgba(255, 255, 255, .1);
-  
+    color: #fff;
+    background-color: rgba(28, 133, 141, 0.1);
+    border-color: rgba(255, 255, 255, 0.1);
 }
 
 .form-control-dark:focus {
-  border-color: transparent;
-  box-shadow: 0 0 0 3px rgba(146, 134, 134, 0.404);
-  
+    border-color: transparent;
+    box-shadow: 0 0 0 3px rgba(146, 134, 134, 0.404);
 }
-.sidebarMenu{
-  background-color: #abdbe3;
+.sidebarMenu {
+    background-color: #abdbe3;
 }
