--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,7 @@
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;1,100&display=swap');
+</style>
+
 body {
   font-size: .875rem;
 }
@@ -12,7 +16,7 @@ body {
  * Sidebar
  */
 
-.sidebar {
+ aside .sidebar {
   position: fixed;
   top: 0;
   /* rtl:raw:
@@ -33,8 +37,10 @@ body {
   }
 }*/
 
-.sidebar-sticky {
+aside .sidebar-sticky {
   position: relative;
+  display: flex;
+  flex-direction: column;
   top: 0;
   height: calc(100vh - 48px);
   padding-top: .5rem;
@@ -43,7 +49,7 @@ body {
 
 }
 
-.sidebar .nav-link {
+aside .sidebar .nav-link {
   font-weight: 500;
   font-size: 16px;
   letter-spacing: .3px;
@@ -56,22 +62,22 @@ body {
 
 }
 
-.sidebar .nav-link .feather {
+aside .sidebar .nav-link .feather {
   margin-right: 4px;
   color: #727272;
 
 }
 
-.sidebar .nav-link.active {
+aside .sidebar .nav-link.active {
   color: #2470dc;
 }
 
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
+aside .sidebar .nav-link:hover .feather,
+aside .sidebar .nav-link.active .feather {
   color: inherit;
 }
 
-.sidebar-heading {
+aside .sidebar-heading {
   font-size: .75rem;
   text-transform: uppercase;
   
@@ -81,18 +87,25 @@ body {
  * Navbar
  */
 
+.navbar {
+  height: 6.7vh;
+  text-align: center;
+}
+
 .navbar-brand {
   padding-top: .75rem;
   padding-bottom: .75rem;
   font-size: 20px;
+  height: 2.5rem;
   text-align: center;
+  width: 14.25rem;
   background-color: rgba(16, 128, 118, 0.87);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
   
 }
 
 .navbar .navbar-toggler {
-  top: .25rem;
+  top: .3rem;
   right: 1rem;
   
   
@@ -117,6 +130,67 @@ body {
   box-shadow: 0 0 0 3px rgba(146, 134, 134, 0.404);
   
 }
+
+.navbar-nav > div .px-3 {
+  margin-left: 1rem;
+  display: inline-flex;
+  margin-top: 0.5rem;
+}
+
+.navbar-nav > div span {
+  color: orange;
+  margin-left: 0.3rem;
+  margin-top: 0.2rem;
+}
+
+.navbar-nav > div span .a{
+  margin-left: 0.2rem;
+  margin-bottom: 0.8rem;
+}
+
 .sidebarMenu{
   background-color: #abdbe3;
+  height: 130vh;
+ }
+
+ aside .sidebarMenu > div ul{
+    display: flex;
+    flex-direction: column;
+    height: 120vh;
+    position: relative;
+    margin-top: 0.5rem;
+ }
+
+ aside .sidebarMenu > div .nav-item {
+    display: flex;
+    margin-left: 1.2rem;
+    margin-top: 1.5rem;
+    gap: 0.5rem;
+    align-items: center;
+    position: relative;
+    height: 2rem;
+    transition: all 300ms ease;
+ }
+
+ aside .sidebarMenu > div .nav-item span a {
+    font-size: 1.6rem;
+    transition: all 300ms ease;
+    color: white;
+ }
+
+ aside .sidebarMenu > div .nav-item span:hover {
+  color: orange;
+  margin-left: 1rem;
 }
+
+aside .sidebarMenu > div a:hover {
+  margin-left: 1rem;
+  color: orange;
+}
+
+
+
+
+ 
+
+ 
