--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -130,13 +130,14 @@ aside .sidebar-heading {
  */
 
 .navbar {
-  height: 6.7vh;
+  height: 6.5vh;
   text-align: center;
 }
 
 .navbar-brand {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
+    height: 6.5vh;
+    padding-top: 0.3rem;
+    padding-bottom: 0.7rem;
     font-size: 20px;
     text-align: center;
     /* background-color: rgba(16, 128, 118, 0.87); */
@@ -147,22 +148,20 @@ aside .sidebar-heading {
 .navbar .navbar-toggler {
     top: 0.25rem;
     right: 1rem;
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: 20px;
-  height: 2.5rem;
-  text-align: center;
-  width: 14.25rem;
-  background-color: rgba(16, 128, 118, 0.87);
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    font-size: 20px;
+    height: 2.5rem;
+    text-align: center;
+    width: 14.25rem;
+    background-color: rgba(16, 128, 118, 0.87);
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
   
 }
 
 .navbar .navbar-toggler {
   top: .3rem;
   right: 1rem;
-  
-  
 }
 
 .navbar .form-control {
@@ -183,12 +182,6 @@ aside .sidebar-heading {
 }
 .sidebarMenu {
     background-color: #abdbe3;
-}
-
-.navbar-nav > div .px-3 {
-  margin-left: 1rem;
-  display: inline-flex;
-  margin-top: 0.5rem;
 }
 
 .navbar-nav > div span {
@@ -217,7 +210,7 @@ aside .sidebar-heading {
 
  aside .sidebarMenu > div .nav-item {
     display: flex;
-    margin-left: 1.2rem;
+    margin-left: 1.4rem;
     margin-top: 1.5rem;
     gap: 0.5rem;
     align-items: center;
@@ -226,6 +219,45 @@ aside .sidebar-heading {
     transition: all 300ms ease;
  }
 
+ aside .sidebarMenu > div .dropdown-emp {
+  position: relative;
+ }
+
+ aside .sidebarMenu > div .dropbtn-emp {
+  background-color: transparent;
+  border-color: transparent;
+ }
+
+ aside .sidebarMenu > div .dropdown-content-emp {
+  display: none;
+  position: absolute;
+  background-color: lightsteelblue;
+  height: 20vh;
+  min-width: 110px;
+  transition: all 300ms ease;
+  z-index: 1;
+ }
+
+ aside .sidebarMenu > div .dropdown-content-emp span a{
+  display: inline-block;
+  
+  transition: all 300ms ease;
+}
+
+.dropdown-content-emp span:hover {
+  color: orange; 
+  margin-left: 1.5rem;
+}
+
+.dropdown-content-emp a:hover {
+  color: orange;
+  margin-left: 1.5rem;
+}
+
+.dropdown-emp:hover .dropdown-content-emp {display: inline-block;}
+
+.dropdown-emp:hover .dropbtn-emp {background-color: transparent;}
+
  aside .sidebarMenu > div .nav-item span a {
     font-size: 1.6rem;
     transition: all 300ms ease;
@@ -233,11 +265,111 @@ aside .sidebar-heading {
  }
 
  aside .sidebarMenu > div .nav-item span:hover {
-  color: rgb(4, 92, 173);
+  color: orange;
   margin-left: 1rem;
 }
 
 aside .sidebarMenu > div a:hover {
   margin-left: 1rem;
-  color:rgb(4, 92, 173);
+  color: orange;
+}
+
+.right {
+  margin-top: 0.6rem;
+  color: white;
+}
+
+.right .top {
+  margin-right: 4rem;
+}
+
+.right .top .px-3 {
+  display: flex;
+}
+
+.right > div .dropdown {
+  position: relative;
+}
+
+.right > div .dropbtn {
+  background-color: transparent;
+  color: orange;
+  margin-top: -0.3rem;
+  padding: 5px;
+  font-size: 16px;
+  border: none;
+}
+
+.right > div .dropdown-content {
+  display: none;
+  position: absolute;
+  margin-left: -4rem;
+  margin-right: 1.2rem;
+  width: 10vw;
+  height: 12vh;
+  
+  background-color: lightsteelblue;
+  min-width: 100px;
+  transition: all 300ms ease;
+  z-index: 1;
+}
+
+.right > div .dropdown-content .profile span a {
+  display: inline-flex;
+  flex-direction: row;
+  transition: all 300ms ease;
+}
+
+.right > div .dropdown-content a {
+  display: inline-flex;
+  flex-direction: row;
+  transition: all 300ms ease;
+}
+
+.dropdown-content span:hover {color: orange;}
+
+.dropdown-content a:hover {color: orange;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: transparent;}
+
+/*--------dashboardmain----------*/
+
+p {
+  border-radius: 0.5rem;
+  background-color: rgb(212, 234, 248);
+  height: 2.5rem;
+  padding-top: 0.2rem;
+  padding-left: 0.5rem;
+}
+
+.date-time {
+  height: 5rem;
+}
+
+.date-time span {
+  color: orange;
+}
+
+.container .row {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 1rem;
+}
+
+.container .row > div {
+  background-color: #6ACFC7;
+  padding: 0.2rem;
+}
+
+.container > div .card-icon {
+  
+  border-radius: 0.5px;
+}
+
+.container > div span {
+  color: black;
+  height: 3rem;
+  width: 3rem;
 }
